Mon Aug 11 08:56:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Log_Msg_Test.cpp:
          Extending testing of ACE_Log_Msg by enabling the format specifiers
          tests and add a test for %T. Also removed the check for vsnprintf
          to see that VxWorks 5.5.x still has a problem with buffer overflows.
          In that case we have to fix that in ACE_Log_Msg.

        * ace/Log_Msg.cpp:
          Fixed some buffer size calculations when ACE_TCHAR != char. Fixed
          %T when wchar is used, thanks to Nathalie D'Amours
          <nathalie at bearsontheloose dot com> for reporting this. This fixes
          bugzilla 3388

        * ace/ACE.{h,cpp} (timestamp):
          Use bool and sizes of buffers should have size_t as type

        * ace/MEM_Stream_Test.cpp:
          Removed incorrect comment

Mon Aug 11 07:36:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Makefile.am:
          Added missing header files. Thanks to haibin zhang
          <dragzhb at yahoo dot com dot cn> for reporting this

Sun Aug 10 23:02:15 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/SSL/SSL_SOCK_Stream.inl (set_handle):

          Reverted back to the C-style cast that was there before Jeff's commit
          because many compilers didn't like a reinterpret_cast<int> here.

Sat Aug  9 17:42:10 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/SSL/SSL_SOCK_Acceptor.cpp:
        * ace/SSL/SSL_SOCK_Connector.cpp:
        * ace/SSL/SSL_SOCK_Stream.inl:
        * ace/SSL/SSL_SOCK_Stream.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_R_Stream.inl:

          Fixed compile errors in inline=0 and Win32-ssl builds.
          ACE_Utils::truncate_cast can't cast ACE_HANDLE to int on Win32.

Fri Aug  8 20:35:37 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/Stack_Trace.cpp:

          Glibc implementation: fixed whitespace
          VxWorks (both kernel and RTP): VxWorks can return -1 for the number